# fastapi-react

./: .gitignore  config.py  constants.py  env.py  main.py  requirements.txt
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/src/: env.py  main.py
backend/src/common/: misc.py
backend/src/core/: __init__.py  config.py  constants.py  db.py  env.py
backend/src/domain/: __init__.py
backend/src/domain/auth/: __init__.py
backend/src/domain/auth/models/: __init__.py  auth.py  auth_model.py
backend/src/domain/auth/routers/: auth.py
backend/src/domain/auth/services/: __init__.py  auth_service.py
backend/src/domain/auth/utils/: auth.py
backend/src/domain/todos/models/: __init__.py  todos.py
backend/src/domain/todos/router/: todos.py
backend/src/domain/todos/routers/: todos.py
backend/src/domain/user/: __init__.py
backend/src/domain/user/models/: user.py
backend/src/domain/user/routers/: user.py
backend/src/domain/user/services/: user_services.py
core/: db.py
domain/auth/models/: auth.py
domain/auth/routers/: auth.py
domain/auth/utils/: auth.py
domain/user/models/: user.py
domain/user/routers/: user.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  main.tsx
frontend/src/api/: apiClient.ts
internal/: db.py
models/: auths.py  user.py
routers/: auths.py  user.py
src/: config.py  constants.py  env.py  main.py
src/common/: misc.py
src/core/: db.py
src/domain/: __init__.py
utils/: auth.py
(+23 files in other folders)
