[tool.poetry]
name = "fastapi-react"
version = "0.1.0"
description = ""
authors = ["p-hzamora <p.hzamora@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
ormlambda = "*"
pyjwt = "*"
bcrypt = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"